[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -81.0
margin_top = -80.0
margin_right = 81.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -19.5
margin_right = 92.0
margin_bottom = 19.5
custom_fonts/font = SubResource( 1 )
text = "Get Ready!"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 48.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
